--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -14,13 +14,13 @@
     </div>
 
     <%- include("./../layout/about/mission.ejs") %>
-      <%- include("./../layout/about/values.ejs") %>
+    <%- include("./../layout/about/values.ejs") %>
     <%- include("./../layout/about/what_we_do.ejs") %>
 
 
   </div>
 
-  <div style="margin-top:-5%; z-index:9999;position:relative">
+  <div class="margin-top-5-neg infinite-z relative" >
     <%- include("./../layout/footer.ejs") %>
   </div>
 
