--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -27,7 +27,10 @@
 
 @media screen and (max-width:1000px) and (orientation:landscape){
     .intro-text-container{
-      margin-top: 0% !important;
+      margin-top: -2.5% !important;
+    }
+    .banners{
+      margin-top:0% !important;
     }
 }
 @media screen and (max-width:1000px){
