--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -2,7 +2,7 @@
 
   <div class="row relative">
 
-      <div class="col-4 no-pad relative no-background z-99 ">
+      <div class="col-4 no-pad relative no-background z-99 logo_col">
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 logo_container light-blue-background">
             <img src = "./assets/images/logo.png"class="width-100" />
           </div>
