--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -35,9 +35,9 @@
       margin-top:7.5% !important;
     }
     .logo_col{
-        width:40% !important;
-        flex: 40%;
-        max-width:40% !important
+        width:33.3333333333% !important;
+        flex: 33.3333333333%;
+        max-width:33.3333333333% !important
     }
     .home_quote_container{
       top: 240% !important;
