--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -61,6 +61,11 @@
     .mobile_text_banner_out_client{
       margin-left: 42.5% !important;
       width: 100% !important;
+    }.contact_us_con{
+      margin-top:-2.5%;
+    }
+    .logo_img{
+          margin-top: -30% !important;
     }
     .about-us-title{
       position: absolute;
@@ -68,10 +73,13 @@
     left: 0%;
     }
     .supportbox{
-          margin-top: 50% !important;
+          margin-top: 5% !important;
     }
     .showimg{
       margin-top: 50% !important;
+    }
+    .mobile-margin-top-20-neg{
+          margin-top: -40% !important;
     }
 }
 @media screen and (max-width:1000px){
