--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -51,6 +51,9 @@
     .wavy_section{
           margin-top: -10% !important;
     }
+    .pos-f-t{
+    background:  #0069a4 !important
+    }
     .showcase_client{
         margin-top: 30% !important;
     }
