--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -51,9 +51,10 @@
     .wavy_section{
           margin-top: -10% !important;
     }
-    .pos-f-t{
-    background:  #0069a4 !important
+    nav{
+      background: #0069a4 !important
     }
+
     .showcase_client{
         margin-top: 30% !important;
     }
