--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -89,7 +89,9 @@
           margin-top: 5% !important;
     }
     .showimg{
-      margin-top: 50% !important;
+      margin-top: 40% !important;
+      width:50%;
+      margin-left:25%;
     }
     .mobile-margin-top-20-neg{
           margin-top: -40% !important;
