--- a/public/assets/css/util_mobile.css
+++ b/public/assets/css/util_mobile.css
@@ -249,10 +249,10 @@
   }
   .mobile-col-12{
 
-      width:100% !important;
+      width:100% ;
       padding-bottom:5%;
-      max-width:100% !important;
-      flex: 100% !important;
+      max-width:100% ;
+      flex: 100% ;
 
   }
   .mobile-padding-top-bottom-2_5{
