--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1093,7 +1093,7 @@ margin-left: 5%;
     font-size:25px !important;
   }
   .mobile-margin-top-70{
-    margin-top:70% !important
+    margin-top:70% ;
   }
   .margin-left-2_5{
     margin-left:2.5%;
