--- a/views/layout/out_clients.ejs
+++ b/views/layout/out_clients.ejs
@@ -1,7 +1,7 @@
 <div class="white-background padding-5 padding-top-2_5 width-100 padding-bottom-5">
   <div class="row width-50 p_row absolute">
     <div class="mobile-col-0"></div>
-    <div class="col-12 mobile-col-12 landscape-col-6>
+    <div class="col-12 mobile-col-12 landscape-col-6">
       <p class="mobile_text_banner_out_clients text-banner text-center width-100 mobile-font-30 font-40" > Our Top Clients </p>
     </div>
       </div>
