--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -110,6 +110,13 @@
         flex: 50% !important;
 
     }
+    .landscape-col-6{
+
+        width:33.333333333333333% !important;
+        max-width:33.33333333333% !important;
+        flex: 33.33333333333333% !important;
+
+    }
 }
 @media screen and (max-width:1000px){
    .showcase_image{
