--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -59,6 +59,7 @@
     }
 
     .showcase_client{
+        height: 100px !important;
         margin-top: 30% !important;
         position:relative;
         bottom:30px;
@@ -72,6 +73,7 @@
       padding-top:15% !important;
 
     }
+
     .mobile_text_banner_out_client{
       margin-left: 42.5% !important;
       width: 100% !important;
@@ -82,8 +84,9 @@
       margin-top:-2.5%;
     }
     .small_logo_img{
+      top: 7.5% !important;
       position: absolute !important;
-      top: -10% !important;
+
     }
     .logo_img{
           margin-top: -30% !important;
@@ -109,6 +112,10 @@
         max-width:50% !important;
         flex: 50% !important;
 
+    }
+    .client_row{
+      width: 100% !important;
+    margin-left: -5% !important
     }
     .landscape-col-4{
 
