--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -89,7 +89,9 @@
 
     }
     .logo_img{
-          margin-top: -30% !important;
+      top: 7.5% !important;
+      position: absolute !important;
+          margin-top: -15% !important;
     }
     .about-us-title{
       position: absolute;
