--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -33,3 +33,9 @@
 
 
 }
+
+@media screen and (orientation:landscape) and (max-width:1000px){
+  .about_container{
+        margin-top: 60% !important;
+  }
+}
