--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -31,6 +31,20 @@
     height:500px !important;
   }
 
+  .landscape-col-12{
+
+      width:100% !important;
+      max-width:100% !important;
+      flex:100% !important;
+
+  }
+  .landscape-col-0{
+
+      width:0% !important;
+      max-width:0% !important;
+      flex:0% !important;
+
+  }
 
 }
 
