--- a/views/layout/about/values.ejs
+++ b/views/layout/about/values.ejs
@@ -18,7 +18,7 @@
               Our company specializes in cleaning windows to lessen you
             </p>
           </div>
-          <div class="col-1 mobile-col-0"></div>
+          <div class="col-1 mobile-col-0 landscape-col-0"></div>
 
           <div class='col-3 mobile-col-12 landscape-col-4'>
             <img class='width-100' src="./assets/images/elements_2.png"/>
@@ -30,7 +30,7 @@
               Our company specializes in cleaning windows to lessen you
             </p>
           </div>
-          <div class="col-1 mobile-col-0"></div>
+          <div class="col-1 mobile-col-0 landscape-col-0"></div>
 
 
           <div class='col-3 mobile-col-12 landscape-col-4'>
@@ -47,7 +47,7 @@
 
 
         </div>
-        <div class="col-1 mobile-col-0"></div>
+        <div class="col-1 mobile-col-0 landscape-col-0"></div>
 
 
       </div>
