--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -38,6 +38,11 @@
       flex:100% !important;
 
   }
+  .landscape-col-0{
+    width:0% !important;
+    max-width:0% !important;
+    flex:0% !important;
+  }
   .landscape-col-3{
 
       width:25% !important;
