--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -43,6 +43,9 @@
     max-width:0% !important;
     flex:0% !important;
   }
+  .landscape-font-16{
+    font-size:16px !important;
+  }
   .landscape-col-3{
 
       width:25% !important;
