--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -885,7 +885,7 @@ cursor: auto;
       }
 
         .mobile-font-16 {
-          font-size:16px !important;
+          font-size:16px ;
         }
 
 
