--- a/views/layout/about/values.ejs
+++ b/views/layout/about/values.ejs
@@ -10,10 +10,10 @@
 
           <div class='col-3 mobile-col-12 landscape-col-3'>
             <img class='width-100' src="./assets/images/elements_1.png"/>
-            <h6 class="mobile-font-18 bold akrobat font-25 text-center ">
+            <h6 class="mobile-font-18 landscape-font-16 a bold akrobat font-25 text-center ">
               Detailed Cleaning
             </h6>
-            <p class="mobile-font-16 akrobat font-18 margin-left-2_5 text-center">
+            <p class="mobile-font-16  akrobat font-18 margin-left-2_5 text-center desktop_visible_only">
               A business that looks well maintained is successful.
               Our company specializes in cleaning windows to lessen you
             </p>
@@ -22,10 +22,10 @@
 
           <div class='col-3 mobile-col-12 landscape-col-3'>
             <img class='width-100' src="./assets/images/elements_2.png"/>
-            <h6 class="mobile-font-18 bold akrobat font-25 text-center ">
+            <h6 class="mobile-font-18 landscape-font-16 a bold akrobat font-25 text-center ">
               Green Friendly
             </h6>
-            <p class="mobile-font-16  akrobat font-18 text-center">
+            <p class="mobile-font-16 krobat font-18 text-center desktop_visible_only">
               A business that looks well maintained is successful.
               Our company specializes in cleaning windows to lessen you
             </p>
@@ -36,10 +36,10 @@
           <div class='col-3 mobile-col-12 landscape-col-3'>
 
             <img class='width-100' src="./assets/images/elements_3.png"/>
-            <h6 class="mobile-font-18  bold akrobat font-25 margin-left-2_5 text-center">
+            <h6 class="mobile-font-18  landscape-font-16  bold akrobat font-25 margin-left-2_5 text-center">
               48 Hour Raincheck
             </h6>
-            <p class="mobile-font-16 akrobat font-18 margin-left-2_5 text-center ">
+            <p class="mobile-font-16 akrobat font-18 margin-left-2_5 text-center desktop_visible_only ">
               A business that looks well maintained is successful.
               Our company specializes in cleaning windows to lessen you
             </p>
