--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -860,7 +860,7 @@ cursor: auto;
 
 
     .mobile-font-18{
-      font-size:18px !important;
+      font-size:18px ;
     }
 
     .mobile-margin-top-20{
@@ -890,7 +890,7 @@ cursor: auto;
 
 
         .mobile-font-18{
-          font-size:18px !important;
+          font-size:18px ;
         }
 
 
