--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -917,7 +917,7 @@ cursor: auto;
   }
 
   .mobile-font-30{
-    font-size: 30px !important;
+    font-size: 30px;
   }
   .mobile-font-20{
     font-size: 20px !important;
