--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -39,7 +39,7 @@
 
   }
   .link_about{
-    font-size:25px;
+    font-size:25px !important;
   }
   .what_we_do_title{
     font-size:45px !important;
