--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -798,7 +798,7 @@ cursor: auto;
     }
 
     .mobile-font-30{
-      font-size:30px !important;
+      font-size:30px ;
     }
 
   .mobile-padding-2{
