--- a/views/layout/about/values.ejs
+++ b/views/layout/about/values.ejs
@@ -1,5 +1,5 @@
 
-    <div class="row background-white mobile-padding-top-bottom-2_5 padding-top-bottom-2_5">
+    <div class="row background-white mobile-padding-top-bottom-2_5 padding-top-bottom-2_5 value_row">
 
 
       <div class="col-2 landscape-col-1"></div>
