--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -15,7 +15,9 @@
     height:1000px !important;
     width:1000px;
   }
-
+.value_row{
+  padding-top:5% !important;
+}
 
 
   .intro-text-container{
