--- a/views/layout/about/values.ejs
+++ b/views/layout/about/values.ejs
@@ -2,13 +2,13 @@
     <div class="row background-white mobile-padding-top-bottom-2_5 padding-top-bottom-2_5 value_row">
 
 
-      <div class="col-2 landscape-col-1"></div>
+      <div class="col-2 mobile-col-0"></div>
 
-      <div class="col-9 landscape-col-10">
+      <div class="col-9 mobile-col-12 padding-left-5">
 
         <div class="row">
 
-          <div class='col-3 mobile-col-12 landscape-col-3'>
+          <div class='col-3 mobile-col-4 landscape-col-3'>
             <img class='width-100' src="./assets/images/elements_1.png"/>
             <h6 class="mobile-font-18 landscape-font-16 a bold akrobat font-25 text-center ">
               Detailed Cleaning
@@ -18,9 +18,9 @@
               Our company specializes in cleaning windows to lessen you
             </p>
           </div>
-          <div class="col-1 mobile-col-0 landscape-col-0"></div>
+          <div class="col-1"></div>
 
-          <div class='col-3 mobile-col-12 landscape-col-3'>
+          <div class='col-3 mobile-col-4 landscape-col-3'>
             <img class='width-100' src="./assets/images/elements_2.png"/>
             <h6 class="mobile-font-18 landscape-font-16 a bold akrobat font-25 text-center ">
               Green Friendly
@@ -30,10 +30,10 @@
               Our company specializes in cleaning windows to lessen you
             </p>
           </div>
-          <div class="col-1 mobile-col-0 landscape-col-0"></div>
+          <div class="col-1"></div>
 
 
-          <div class='col-3 mobile-col-12 landscape-col-3'>
+          <div class='col-3 mobile-col-4 landscape-col-3'>
 
             <img class='width-100' src="./assets/images/elements_3.png"/>
             <h6 class="mobile-font-18  landscape-font-16  bold akrobat font-25 margin-left-2_5 text-center">
