--- a/views/layout/about/values.ejs
+++ b/views/layout/about/values.ejs
@@ -6,7 +6,7 @@
 
       <div class="col-9 mobile-col-12 padding-left-5">
 
-        <div class="row">
+        <div class="row mobile-margin-top-2_5">
 
           <div class='col-3 mobile-col-4 landscape-col-3'>
             <img class='width-100' src="./assets/images/elements_1.png"/>
