--- a/views/layout/about/values.ejs
+++ b/views/layout/about/values.ejs
@@ -4,7 +4,7 @@
 
       <div class="col-2 mobile-col-0"></div>
 
-      <div class="col-9 mobile-col-12 padding-left-5">
+      <div class="col-9 mobile-col-12 mobile-margin-left-2_5 value_col">
 
         <div class="row mobile-margin-top-2_5">
 
