--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Archivo+Black&family=Exo:wght@800;900&family=Heebo:wght@800&family=Merienda+One&family=Montserrat&family=Noto+Sans:wght@300&family=Poppins:wght@600&family=Roboto+Condensed:wght@300;400&family=Roboto:ital,wght@0,300;1,100&family=Rubik+Distressed&family=Rubik+Moonrocks&family=Teko:wght@300;500&family=Vast+Shadow&family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="./assets/css/util.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/util_mobile.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/util_mobile.css" /> -->
 
     <link rel="stylesheet" type="text/css" href="./assets/css/contact.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
