--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -14,13 +14,13 @@
 
               <div class="row margin-top-5">
                   <div class="col-3 mobile-col-6">
-                      <a href="/quote"class="normal_link"><p class="link_about border-bottom-light-red padding-top-5 akrobat width-80 font-20 white mobile-font-16 text-center" > Free Quote </p></a>
+                      <a href="/quote"class="normal_link"><p class="link_about border-bottom-light-red padding-top-5 akrobat width-80 font-20 white text-center" > Free Quote </p></a>
                   </div>
                   <div class="col-3 mobile-col-6">
-                      <p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white  mobile-font-16"> Contact Us </p>
+                      <p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white  "> Contact Us </p>
                   </div>
                   <div class="col-3 mobile-col-6">
-                    <a href="/#our_clients"class="normal_link"><p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white  mobile-font-16"> Our Clients </p></a>
+                    <a href="/#our_clients"class="normal_link"><p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white "> Our Clients </p></a>
                   </div>
               </div>
 
