--- a/public/assets/css/util_mobile.css
+++ b/public/assets/css/util_mobile.css
@@ -321,44 +321,44 @@ margin-left: 5%;
     border:none;
   }
   .mobile-padding-top-10{
-    padding-top:10% !important;
+    padding-top:10% ;
   }
   .mobile-padding-bottom-10{
     padding-bottom: 10%;
   }
   .mobile-text-left{
-    text-align: left !important;
+    text-align: left ;
   }
   .mobile-font-25{
-    font-size:25px !important;
+    font-size:25px ;
   }
   .mobile-margin-top-70{
-    margin-top:70% !important
+    margin-top:70%
   }
   .margin-left-2_5{
     margin-left:2.5%;
   }
   .mobile-height-550px{
-    height:550px !important;
+    height:550px ;
   }
   .mobile-margin-top-20{
-    margin-top:20% !important;
+    margin-top:20% ;
   }
   .mobile-margin-top-10{
-    margin-top:10% !important;
+    margin-top:10% ;
   }
   .no-col{
-    max-width:0% !important;
-    width:0% !important;
+    max-width:0% ;
+    width:0% ;
     flex:0%;
   }
   .margin-left-10-import{
-    margin-left:10% !important;
+    margin-left:10% ;
   }
 
   .mobile-col-11{
-    max-width: 95% !important;
-    width:95% !important;
+    max-width: 95% ;
+    width:95% ;
     flex:  0 0 95%;
     margin-left:2.5%;
   }
@@ -405,21 +405,21 @@ margin-left: 5%;
 
   }
   .mobile-absolute{
-    position: absolute !important;
+    position: absolute ;
   }
 
   .mobile-padding-10{
-    padding:10% !important;
+    padding:10% ;
   }
 .mobile-margin-top-10{
-  margin-top:10% !important;
+  margin-top:10% ;
 }
   .mobile-height-100{
-    height:100% !important;
+    height:100% ;
   }
 
 .mobile-height-175px{
-  height:175px !important;
+  height:175px ;
 }
   .mobile-margin-top-10{
     margin-top:10%;
@@ -429,19 +429,19 @@ margin-left: 5%;
   }
 
   .mobile-width-100{
-    width:100% !important
+    width:100%
   }
   video{
     overflow-y: hidden;
   }
   .mobile-height-575px{
-    height:575px !important;
+    height:575px ;
   }
   .mobile-margin-top-100{
-    margin-top:100% !important;
+    margin-top:100% ;
   }
   .mobile-margin-right-10{
-    margin-right:10% !important;
+    margin-right:10% ;
 
   }
   .mobile-margin-top-20{
