--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1182,7 +1182,7 @@ margin-left: 5%;
     padding:10% !important;
   }
 .mobile-margin-top-10{
-  margin-top:10% !important;
+  margin-top:10% ;
 }
   .mobile-height-100{
     height:100% !important;
