--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -50,6 +50,9 @@
 
 @media screen and (orientation:landscape) and (max-width:1000px){
   .quotesheet_wrapper{
-    margin-top:60% !important;
+    margin-top:65% !important;
+  }
+  .landscape-margin-top-5{
+    margin-top:5% !important;
   }
 }
