--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -608,7 +608,9 @@ white-background{
   background:white;
 }
 
-
+.no-border{
+  border: 2px solid transparent !important;
+}
 .white{
   color:white;
 }
@@ -1184,6 +1186,7 @@ margin-left: 5%;
 .mobile-margin-top-10{
   margin-top:10% ;
 }
+
   .mobile-height-100{
     height:100% !important;
   }
