--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -6,10 +6,10 @@
       <div class="col-10 mobile-col-11">
         <div class="row">
           <div class="col-6 darker-navy-background">
-             <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 no-border" >Before </p>
+             <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 no-border-bottoms" >Before </p>
           </div>
           <div class='col-6 dark-navy-background'>
-            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 no-border" >After </p>
+            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 no-border-bottoms" >After </p>
           </div>
         </div>
       </div>
