--- a/views/layout/quote/quote_sheet.ejs
+++ b/views/layout/quote/quote_sheet.ejs
@@ -1,6 +1,6 @@
 <div class="quotesheet_wrapper">
   <p class="mobile-width-80 width-40 text-banner">Free Quote! </p>
-  <div class=" mobile-margin-top-10 landscape-margin-top-5 padding-5 padding-bottom-0 white-background margin-bottom-5 heavy-shadow margin-left-5 width-90 gray-border margin-top-5 margin-top-20">
+  <div class=" mobile-margin-top-10 landscape-margin-top-2_5 padding-5 padding-bottom-0 white-background margin-bottom-5 heavy-shadow margin-left-5 width-90 gray-border margin-top-5 margin-top-20">
     <div class="quotesheet_container" >
   <p class="quotesheet_title text-center akrobat font-25 bold">Make Your Windows Shine Today!</p>
 
