--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -52,7 +52,10 @@
   .quotesheet_wrapper{
     margin-top:65% !important;
   }
-  .landscape-margin-top-5{
-    margin-top:5% !important;
+  .landscape-margin-top-2_5{
+    margin-top:2.5% !important;
+  }
+  .landscape-margin-top-0{
+    margin-top:0% !important;
   }
 }
