--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -1003,7 +1003,7 @@ cursor: auto;
     float:left !important;
   }
   .mobile-margin-top-10{
-    margin-top:10% !important;
+    margin-top:10% ;
   }
   .mobile-col-10{
 
