--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -809,7 +809,7 @@ cursor: auto;
   }
 
     .mobile-margin-top-10{
-      margin-top:10% !important;
+      margin-top:10% ;
     }
 
     .mobile-font-30{
@@ -919,7 +919,7 @@ cursor: auto;
         flex: 0 0 83.333333333%
       }
   .mobile-margin-top-10{
-    margin-top:10% !important;
+    margin-top:10% ;
   }
   .mobile-font-30{
     font-size:30px;
@@ -1120,7 +1120,7 @@ margin-left: 5%;
     margin-top:20% !important;
   }
   .mobile-margin-top-10{
-    margin-top:10% !important;
+    margin-top:10% ;
   }
   .no-col{
     max-width:0% !important;
