--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -55,6 +55,9 @@
   .landscape-margin-top-2_5{
     margin-top:2.5% !important;
   }
+  .landscape-margin-top-5{
+    margin-top:5% !important;
+  }
   .landscape-margin-top-0{
     margin-top:0% !important;
   }
