--- a/views/layout/quote/before_and_after.ejs
+++ b/views/layout/quote/before_and_after.ejs
@@ -1,7 +1,7 @@
-<div class="margin-top-2_5 padding-bottom-5 mobile-margin-top-10 landscape-margin-top-0">
+<div class="margin-top-2_5 padding-bottom-5 mobile-margin-top-10 landscape-margin-top-2_5">
   <p class="before_after_title text-banner mobile-width-80">Our Work </p>
 
-  <div class="row margin-top-5 mobile-margin-top-10 landscape-margin-top-2_5">
+  <div class="row margin-top-5 mobile-margin-top-10 landscape-margin-top-5">
       <div class="col-1 no-col"></div>
       <div class="col-10 mobile-col-11">
         <div class="row">
